--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   kkfileview_nas:
-    image: kkfileview_nas:latest
+    image: kkfileview_nas:v1.0
     container_name: kfileview_nas
     restart: always
     environment:
